# zen_focus

./: .gitignore  Dockerfile  LICENSE  README.md  Tutorial_Zen_Focus.ipynb  docker-compose.yml  prueba.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
tests/: test_temas.py
zen_focus/: __init__.py  decoradores.py  escudo.py  motor.py  widgets.py
zen_focus/temas/: __init__.py  base.py  bebida.py  cohete.py  edificio.py  flor.py
