[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zen-focus"
version = "0.1.1"
description = "Un motor de concentración gamificado para la terminal."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tu Nombre", email = "tu@email.com" }
]
dependencies = [
    # Agregaremos 'rich' para la interfaz de terminal viva que discutimos
    "rich>=13.0.0", 
]
[tool.setuptools.packages.find]
include = ["zen_focus*"]  # Solo incluye la carpeta de la librería 

[project.urls]
Homepage = "https://github.com/taniahdzl/zen_focus"