[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zen-focus"
version = "0.2.6"
description = "Un motor de concentración gamificado para la terminal."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tania H", email = "therna24@itam.com" }
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
notebook = [
    "ipywidgets>=8.0.0",
    "ipython>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["zen_focus*"]

[project.urls]
Homepage = "https://github.com/taniahdzl/zen_focus"
